--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -22,19 +24,210 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <h1>Spoken Mirror </h1>
+              <a href="http://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html">
+                Link to Docs</a> 
+                <br/>
+                <br/>
+
+            <input type="text" x-webkit-speech speech />
+
+            <div id="info">
+              <p id="info_start">Click on the microphone icon and begin speaking.</p>
+              <p id="info_speak_now">Speak now.</p>
+              <p id="info_no_speech">No speech was detected. You may need to adjust your
+                <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
+                  microphone settings</a>.</p>
+              <p id="info_no_microphone" style="display:none">
+                No microphone was found. Ensure that a microphone is installed and that
+                <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
+                microphone settings</a> are configured correctly.</p>
+              <p id="info_allow">Click the "Allow" button above to enable your microphone.</p>
+              <p id="info_denied">Permission to use microphone was denied.</p>
+              <p id="info_blocked">Permission to use microphone is blocked. To change,
+                go to chrome://settings/contentExceptions#media-stream</p>
+              <p id="info_upgrade">Web Speech API is not supported by this browser.
+                 Upgrade to <a href="//www.google.com/chrome">Chrome</a>
+                 version 25 or later.</p>
+            </div>
+            <div class="right">
+              <button id="start_button" onclick="startButton(event)">
+                <img id="start_img" src="img/mic.gif" alt="Start"></button>
+            </div>
+            <canvas id="textImage"  width="320" height="240" style="visibility: visible;"></canvas>
+            <canvas id="greyVideoImage" width="320" height="240" style="visibility: visible;background-color:black;"></canvas>
+            <div id="results">
+            <canvas id="videoImage" width="320" height="240" style="visibility: visible;"></canvas>
+
+              <span id="final_span" class="final"></span>
+              <span id="interim_span" class="interim"></span>
+              <p>
+            </div>
+            <div class="center">
+              <div class="sidebyside" style="text-align:right">
+                <button id="copy_button" class="button" onclick="copyButton()">
+                  Copy and Paste</button>
+                <div id="copy_info" class="info">
+                  Press Control-C to copy text.<br>(Command-C on Mac.)
+                </div>
+              </div>
+              <div class="sidebyside">
+                <button id="email_button" class="button" onclick="emailButton()">
+                  Create Email</button>
+                <div id="email_info" class="info">
+                  Text sent to default email application.<br>
+                  (See chrome://settings/handlers to change.)
+                </div>
+              </div>
+              <p>
+              <div id="div_language">
+                <select id="select_language" onchange="updateCountry()"></select>
+                &nbsp;&nbsp;
+                <select id="select_dialect"></select>
+              </div>
+            </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/RequestAnimationFrame.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
+        </script> -->
+
+
+<p id="errorMessage"></p>
+
+<center>
+Video on left, Canvas on right.
+<br />
+<video id="monitor" autoplay width="320" height="240" style="visibility: visible;"></video>
+</center>
+
+<div id="topleftcolor" style="width:200px;height:100px;background-color:red"></div>
+<div id="toprightcolor" style="width:200px;height:100px;background-color:blue"></div>
+
+<script src="js/RequestAnimationFrame.js">
+//  Provides requestAnimationFrame in a cross browser way.
+//  http://paulirish.com/2011/requestanimationframe-for-smart-animating/
+</script>
+
+<script>
+navigator.getUserMedia = navigator.webkitGetUserMedia || navigator.getUserMedia;
+window.URL = window.URL || window.webkitURL;
+
+var camvideo = document.getElementById('monitor');
+
+    if (!navigator.getUserMedia) 
+    {
+        document.getElementById('errorMessage').innerHTML = 
+            'Sorry. <code>navigator.getUserMedia()</code> is not available.';
+        return;
+    }
+    navigator.getUserMedia({video: true}, gotStream, noStream);
+
+function gotStream(stream) 
+{
+    if (window.URL) 
+    {   camvideo.src = window.URL.createObjectURL(stream);   } 
+    else // Opera
+    {   camvideo.src = stream;   }
+
+    camvideo.onerror = function(e) 
+    {   stream.stop();   };
+
+    stream.onended = noStream;
+}
+
+function noStream(e) 
+{
+    var msg = 'No camera available.';
+    if (e.code == 1) 
+    {   msg = 'User denied access to use camera.';   }
+    document.getElementById('errorMessage').textContent = msg;
+}
+</script>
+
+<!-- The code below contains a loop to draw the contents of the video tag
+     onto the canvas tag, enabling us to do cool things with the image. -->
+     
+<script>
+
+// global variables
+var video, videoImage, videoImageContext;
+var data;
+
+var speechBuffer="ANDNOWYOUDOWHATTHEYTOLDYA";
+
+// text canvas
+var textImage = document.getElementById("textImage");
+var textImageContext = textImage.getContext("2d");
+
+
+// assign variables to HTML elements
+video = document.getElementById( 'monitor' );
+videoImage = document.getElementById( 'videoImage' );
+topleftcolor = document.getElementById( 'topleftcolor' );
+bottomrightcolor = document.getElementById( 'bottomrightcolor' );
+videoImageContext = videoImage.getContext( '2d' );
+
+var ctx = document.getElementById('greyVideoImage').getContext('2d');
+// background color if no video present
+videoImageContext.fillStyle = '#000000';
+videoImageContext.fillRect( 0, 0, videoImage.width, videoImage.height );                
+
+function showFillText(text) {
+    textImage.width = textImage.width;
+    videoImage.width = videoImage.width;
+
+    textImageContext.fillStyle = '#f00';
+    textImageContext.font = '  18px sans-serif';
+    textImageContext.textBaseline = 'bottom';
+    for(var i = 0; i<20; i++){
+
+        textImageContext.fillText(text, 0, 15*i);
+    }
+}
+
+showFillText(speechBuffer);
+
+// start the loop               
+animate();
+
+function animate() 
+{
+    setInterval(function(){
+        requestAnimationFrame( animate );
+        render();  
+    },3000);
+}
+
+function render() 
+{   
+    if ( video.readyState === video.HAVE_ENOUGH_DATA ) {
+        videoImageContext.drawImage( video, 0, 0, videoImage.width, videoImage.height );
+        //  get pixelArray from imagedata object
+        var data = videoImageContext.getImageData(0, 0, videoImage.width, videoImage.height).data;
+        var textdata = textImageContext.getImageData(0, 0, textImage.width, textImage.height).data;
+        for(var i = 0; i < 76800;  i++){
+            if ( textdata[i*4] > 254 ){
+                r = data[i*1*4];
+                g = data[i*1*4+1];
+                b = data[i*1*4+2];
+                ctx.fillStyle = 'rgb(' + r + ','+ g + ','+ b + ')';
+                ctx.fillRect ((i * 1) % 320, (i / 320) * 1, 1, 1 );
+            }
+        }
+    }
+}
+
+</script>
     </body>
 </html>
+
